# jikai

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  UPGRADE_SUMMARY.md  WORKON-PIVOT-ASAP.md  bandit-report.json  coverage.xml  docker-compose.dev.yml  docker-compose.yml  env.example  my-ftdc.pp  my-ftdc.te  pyproject.toml  readme2.md  requirements.txt  todo.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260228_000001_initial_schema.py  20260228_000002_add_query_indexes.py  20260301_000003_add_quality_gate_failure_codes.py
archive/jikai_v0/: README.md  all.py  chain.py  dex.py  prepare.py
archive/jikai_v1/: README.md
asset/reference/: architecture_diagram.py
corpus/clean/tort/: corpus.json
corpus/contract/: 1.txt  10.txt  12.txt  13.txt  14.txt  2.txt  3.txt  5.txt  6.txt  8.txt
corpus/contract-1/: 1.txt  11.txt  12.txt  15.txt  16.txt  3.txt  4.txt  7.txt  9.txt
corpus/labelled/: SCHEMA.md  sample.csv  tort_labels.csv
corpus/raw/contract/: 11.txt  13.txt  14.txt  15.txt  16.txt  2.txt  4.txt  7.txt  8.txt  9.txt
corpus/raw/tort/: 11.txt  12.txt  16.txt  18.txt  20.txt  22.txt  23.txt  24.txt  25.txt  26.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  40.txt  41.txt  5.txt  6.txt  7.txt
corpus/tort/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
data/: bench_latency.json  jikai.db
jikai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
script/: architecture_diagram.py
scripts/: jikai_debug.sh
src/: agent.py  agent.py.deprecated  all.py  helper.py  main.py  prepare.py  sanitise.py  warmup.py
src/api/: __init__.py  __main__.py  app_runner.py  main.py  web.py
src/api/routes/: chat.py  corpus.py  database.py  health.py  jobs.py  llm.py  validation.py  workflow.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  packs.py  topics.py
src/domain/templates/: __init__.py  assault.json  battery.json  causation.json  contributory_negligence.json  defamation.json  duty_of_care.json  false_imprisonment.json  harassment.json  negligence.json  private_nuisance.json  rylands_v_fletcher.json  vicarious_liability.json
src/logs/: events.out.tfevents.1733822653.gongthinkpad.11518.0  events.out.tfevents.1733822812.gongthinkpad.12268.0  events.out.tfevents.1733822865.gongthinkpad.12480.0
src/ml/: __init__.py  classifier.py  clustering.py  complexity_controller.py  data.py  labeller.py  pipeline.py  regressor.py  structural_planner.py  topic_selector.py
src/pretrained/: finetune.py  generate.py  prepare.py  setup.py  tokenize.py
src/scratch/: build.py  custom.py  generate.py  prepare.py  train.py
src/services/: __init__.py  chat_nlu.py  corpus_preprocessor.py  corpus_service.py  database_service.py  error_mapper.py  export_service.py  hypo_generator.py  hypothetical_service.py  llm_service.py  migrations.py  preview_estimator.py  scraper_service.py  startup_checks.py  topic_guard.py  validation_service.py  vector_service.py  workflow_facade.py
src/services/llm_providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  local_provider.py  ollama_provider.py  openai_provider.py
src/services/prompt_engineering/: __init__.py  templates.py
src/tokenized_data/: data-00000-of-00001.arrow  state.json
src/tui/: __init__.py  __main__.py  app.py  app_runner.py  console.py  constants.py  contracts.py  corpus.py  generation.py  history.py  history_models.py  inputs.py  installer.py  logging.py  menus.py  models.py  navigation.py  providers.py  rich_app.py  runtime.py  settings.py  state.py  textual_app.py  tools_flow.py  types.py  utils.py
src/tui/flows/: cleanup.py  corpus.py  gen.py  history.py  label.py  ocr.py  settings.py  train.py
src/tui/legacy/: __init__.py  rich_app.py
src/tui/screens/: __init__.py  corpus.py  demo_flow.py  diagnostics.py  generate.py  history.py  providers.py  settings.py  setup_wizard.py  train.py
src/tui/services/: __init__.py  env_store.py  latency_metrics.py  provider_health_cache.py  stream_persistence.py
src/tui/tools/: __init__.py  capture.py
src/tui/widgets/: __init__.py  (+4 more)
tests/: __init__.py  conftest.py  diag_imports.py  smoke_test_tui_imports.py
tests/perf/: benchmark_latency.py
tests/test_domain/: test_topics.py
tests/test_ml/: test_classifier.py  test_clustering.py  test_pipeline.py  test_regressor.py
tests/test_services/: __init__.py  test_api_endpoints.py  test_api_generate_contract.py  test_api_smoke.py  test_api_topic_guard.py  test_corpus_preprocessor.py  test_corpus_service_vector_fallback.py  test_database_service.py  test_error_mapper.py  test_generation_request.py  test_hypothetical_cache.py  test_llm_providers.py  test_llm_service.py  test_prompt_templates.py  test_startup_checks.py  test_validation_service.py  test_vector_service_threshold.py  test_workflow_facade.py
tests/test_tui/: test_env_store.py  test_history_models.py  test_interactions.py  test_main_cli.py  test_screens.py  test_textual_bindings.py
tests/test_tui_textual/: test_demo_flow_smoke.py  test_textual_screens.py
tui/: Cargo.toml
tui/src/: app.rs  async_join.rs  config.rs  event.rs  main.rs
tui/src/api/: client.rs  mod.rs  streaming.rs  types.rs
tui/src/screens/: batch.rs  chat.rs  cleanup.rs  embed.rs  export.rs  guided.rs  history.rs  main_menu.rs  mod.rs  more.rs  preprocess.rs  providers.rs  scrape.rs  settings.rs  stats.rs  train.rs
tui/src/screens/corpus/: browse_impl.rs  label_impl.rs  mod.rs
tui/src/screens/generate/: mod.rs  topics.rs
tui/src/state/: chat.rs  generation.rs  mod.rs  navigation.rs
tui/src/ui/: layout.rs  mod.rs  theme.rs
tui/src/ui/widgets/: breadcrumb.rs  checkbox.rs  confirm.rs  menu.rs  mod.rs  panel.rs  progress.rs  status_bar.rs  stream_view.rs  table.rs  text_input.rs
(+1 files in other folders)
