[package]
name = "jikai-tui"
version = "2.0.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
unicode-width = "0.2"
